src/main.css
@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
@tailwind base;
@tailwind components;
@tailwind utilities;

.rubik {
  font-family: "Rubik", sans-serif;
  font-optical-sizing: auto;
  font-weight: 300;
  font-style: normal;
}

body {
  @apply rubik bg-orange-50;
}

a {
  @apply text-green-700 hover:text-green-900;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  @apply font-bold text-green-900;
}

h1 {
  @apply text-2xl;
}

h2 {
  @apply text-xl pb-3;
}

nav {
  @apply py-3;
}

section, header {
  @apply my-8 px-4 max-w-prose mx-auto;
}

